# sentrik-demo-medapi

./: .env.example  .gitignore  .guard.yaml  Dockerfile  README.md  architecture.yaml  docker-compose.yml  governance.yaml  openapi.yaml  pyproject.toml  requirements.yaml
.github/workflows/: sentrik-gate.yml
.sentrik/: config.yaml  suppressions.yaml
.sentrik/rules/: medapi-custom.yaml
.sentrik/rules/openapi-vitalsync-medical-api/: pack.yaml
client/: util.js
docs/: DEMO_SCRIPT.md  STORYBOARD.md
docs/evidence/: index.html
docs/evidence/after/: compliance-report-soc2.html  (+7 more)
docs/walkthrough/: 00-overview.md  01-requirements.md  02-init-and-config.md  03-first-scan.md  04-fix-findings.md  05-supply-chain.md  06-ci-gate.md  07-dashboard.md  08-compliance-reports.md  09-devops-integration.md  10-advanced-features.md
examples/: sample_work_items.json
firmware/: checksum.c
recordings/: 01-init-and-scan.cast  02-fix-and-gate.cast  03-supply-chain.cast  04-compliance.cast  05-full-lifecycle.cast  player.html
scripts/: record_ai_chat.py  record_casts.py  record_dashboard_videos.py  screenshot_dashboard.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  dependencies.py
src/db/: __init__.py  database.py
src/models/: __init__.py  device.py  patient.py  vitals.py
src/services/: __init__.py  alert_engine.py  audit_service.py  encryption_service.py  vitals_processor.py
src/utils/: __init__.py  phi_filter.py  traceability.py  validators.py
tests/: __init__.py  test_alerts.py  test_audit.py  test_encryption.py  test_patients.py  test_vitals.py
(+23 files in other folders)
